tests/baselines/reference/jsFileCompilationTypeAssertions.errors.txt
error TS5055: Cannot write file 'tests/cases/compiler/a.js' because it would overwrite input file.
tests/cases/compiler/a.js(1,10): error TS8016: 'type assertion expressions' can only be used in a .ts file.


!!! error TS5055: Cannot write file 'tests/cases/compiler/a.js' because it would overwrite input file.
==== tests/cases/compiler/a.js (1 errors) ====
    var v = <string>undefined;
             ~~~~~~
!!! error TS8016: 'type assertion expressions' can only be used in a .ts file.